--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,57 +3,6 @@
 version: '3'
 
 services:
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
-    environment:
-      -
-      -
-    ports:
-      - "9200:9200"
-  kibana:
-    image: docker.elastic.co/kibana/kibana:6.3.2
-    ports:
-      - "5601:5601"
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: monitoring_prometheus
-    restart: unless-stopped
-    volumes:
-      -
-      -
-    command:
-      - '-config.file=/etc/prometheus/prometheus.yml'
-      - '-storage.local.path=/prometheus'
-      - '-alertmanager.url=http://alertmanager:9093'
-    expose:
-      - 9090
-    ports:
-      - 9090:9090
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: monitoring_grafana
-    restart: unless-stopped
-    links:
-      - prometheus:prometheus
-    volumes:
-      - ./data/grafana:/var/lib/grafana
-    environment:
-      #- GF_SECURITY_ADMIN_PASSWORD=MYPASSWORT
-      #- GF_USERS_ALLOW_SIGN_UP=false
-      #- GF_SERVER_DOMAIN=myrul.com
-      #- GF_SMTP_ENABLED=true
-      #- GF_SMTP_HOST=smtp.gmail.com:587
-      #- GF_SMTP_USER=myadrress@gmail.com
-      #- GF_SMTP_PASSWORD=mypassword
-      #- GF_SMTP_FROM_ADDRESS=myaddress@gmail.com
-
-  kafka:
-
-    volumes:
-      - /path/to/kafka-persistence:/bitnami/kafka
-
   postgres:
     image: postgres
     environment:
@@ -61,3 +10,51 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
+
+  prometheus:
+    image: prom/prometheus:v2.11.1
+    container_name: prometheus
+    ports:
+    - 9090:9090
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+    - "80:3000"
+    depends_on:
+      - prometheus
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zookeeper
+    ports:
+      - "12181:12181"
+    environment:
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 12181
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    hostname: kafka-1
+    ports:
+      - "19092:19092"
+    depends_on:
+      - zookeeper
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.1
+    container_name: elasticsearch
+    ports:
+      - 9200:9200
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.13.1
+    container_name: kibana
+    ports:
+    - 5601:5601
+    environment:
+      ELASTICSEARCH_URL: http://localhost:9200
+      ELASTICSEARCH_HOSTS: '["http://localhost:9200"]'
+    depends_on:
+      - elasticsearch
